--- a/settings.json
+++ b/settings.json
@@ -9,13 +9,13 @@
 	"auto_leave_msg": true,
 	"prefix": ".",
 	"language":"ind",
-	"ownerNumber": "62887435047326",
-	"ownerNumberr": "62887435047326",
-	"cr": "@ZeeoneOfcོ",
-	"ownername": "ZeeoneOfcོ",
+	"ownerNumber": "15856056661",
+	"ownerNumberr": "15856056661",
+	"cr": "@HanifKunz",
+	"ownername": "HanifKunz",
 	"botname":"ALPHABOT",
 	"thumb":"thumbnail_1.jpg",
 	"thumbnail":"thumbnail_2.jpg",
 	"fakethumb":"thumbnail_1.jpg", 
-	"fake": " 「  ALPHABOT  」\nCreated By @ZeeoneOfcོ"
+	"fake": " 「  ALPHABOT  」\nCreated By @HanifKunz"
 }
